<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MX Tides</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="units_of_measure">Height units of measure</string>
    <string name="number_of_station_cards">Number of station cards</string>
    <string name="done">Done</string>
    <string name="click_to_zoom">click to zoom in</string>
    <string name="station_time">Station Time</string>
    <string name="menu_search">Search</string>
    <string name="noticetitle">NOT FOR NAVIGATION, ABSOLUTELY NO WARRANTY</string>
    <string name="notice">MX Tides &#169; 2015 Will Kamp\n<a>https://github.com/manimaul/MX-Tides</a>\n\nMX Tides is an Android port of XTide by David Flater\nPlease see: <a>http://flaterco.com/xtide</a>\n\nMX Tides also uses the following open source libraries:\n\nAndXtideLib - <a>http://github.com/manimaul/andxtidelib</a>\n\nAndroidSVG - <a>https://code.google.com/p/androidsvg</a>\n\nGeoHash - <a>https://github.com/kungfoo/geohash-java</a>\n\nRXAndroid - <a>https://github.com/ReactiveX/RxAndroid</a>\n\nMX Tides is provided under the terms of the GNU General Public License, either version 3 of the License, or (at your option) any later version.</string>

    <string name="gpltitle">GPL v3</string>
    <string name="gpl">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see <a>http://www.gnu.org/licenses</a>.\n\n</string>
    <string name="closest_tide_stations">Closest Tide Station(s)</string>
    <string name="closest_current_stations">Closest Tidal Current Station(s)</string>
    <string name="tide_station_map_subtitle">Tide Station Map</string>
    <string name="current_station_map_subtitle">Current Station Map</string>
    <string name="title_activity_station">Station Details</string>

    <string name="prediction_now">Prediction:</string>
    <string name="station_time_now">Station Time:</string>
    <string name="station_name">Station Name:</string>
    <string name="prediction_details">Prediction Details Table:</string>
    <string name="view">View</string>

    <string name="tide_station_map">Tide Station Map</string>
    <string name="tide_currents_station_map">Tidal Currents Station Map</string>
    <string name="info_options">Info and Options</string>
    <string name="harmonics_db_info">Harmonics Database Info</string>

    <string name="choose_date">"Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="right_now">Right Now</string>

</resources>