<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.mxmariner.activity.StationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_station_labels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/activity_main_topleft_labels"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="start"
                    android:id="@+id/activity_station_name_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:text="@string/station_name"/>

                <TextView
                    android:id="@+id/activity_station_name"
                    android:layout_gravity="start"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:lines="2"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    tools:text="Seattle, Puget Sound, Washington"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/activity_main_station_datetime_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="start"
                    android:text="@string/station_time_now"/>

                <TextView
                    android:layout_gravity="start"
                    android:id="@+id/activity_station_datetime"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_dark"
                    tools:text="2015-01-26 08:21 AM PST"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_gravity="start"
                    android:id="@+id/activity_main_prediction_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:text="@string/prediction_now"/>

                <TextView
                    android:id="@+id/activity_station_prediction"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:textColor="@color/secondary_text"
                    tools:text="12.23 feet"/>
            </LinearLayout>

            <com.mxmariner.viewcomponent.CircleCutoutLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_gravity="end">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:liteMode="true"
                    tools:visibility="visible"
                    app:mapType="normal" />

                <View
                    android:id="@+id/map_view_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>

            </com.mxmariner.viewcomponent.CircleCutoutLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/activity_station_graph_scroll_view"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rect"
            android:padding="@dimen/border_width"
            android:layout_marginBottom="8dp">

            <FrameLayout
                android:layout_width="@dimen/graph_width"
                android:layout_height="@dimen/graph_height"
                android:padding="@dimen/border_width">

                <ImageView
                    android:id="@+id/activity_station_graph_iv"
                    android:layout_width="@dimen/graph_width"
                    android:layout_height="@dimen/graph_height" />

            </FrameLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/activity_main_table_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:text="@string/prediction_details"/>

        <com.mxmariner.viewcomponent.TextViewList
            android:id="@+id/activity_station_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </LinearLayout>




</ScrollView>
