<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/card_view"
                                    android:layout_gravity="center"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    card_view:cardCornerRadius="8dp"
                                    card_view:cardElevation="4dp"
                                    android:layout_margin="8dp" >

        <LinearLayout
            android:id="@+id/station_card_labels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/activity_main_topleft_labels"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="313dp"
                android:orientation="vertical">

                <com.mxmariner.viewcomponent.CircleCutoutLayout
                    android:id="@+id/station_card_map_circle_layout"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="8dp" >

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/map_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:liteMode="true"
                        tools:visibility="visible"
                        app:mapType="normal" />

                    <View
                        android:id="@+id/map_view_cover"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"/>

                </com.mxmariner.viewcomponent.CircleCutoutLayout>

                <TextView
                    android:id="@+id/station_card_name_label"
                    android:layout_below="@+id/station_card_map_circle_layout"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:text="@string/station_name"/>

                <TextView
                    android:id="@+id/station_card_name"
                    android:layout_below="@+id/station_card_name_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:lines="2"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    tools:text="Seattle, Puget Sound, Washington"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/activity_main_station_datetime_label"
                    android:layout_above="@+id/station_card_datetime"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:layout_marginTop="8dp"
                    android:text="@string/station_time_now"/>

                <TextView
                    android:id="@+id/station_card_datetime"
                    android:layout_above="@+id/station_card_prediction_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    tools:text="2015-01-26 08:21 AM PST"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/station_card_prediction_label"
                    android:layout_above="@+id/station_card_prediction"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:text="@string/prediction_now"/>

                <TextView
                    android:id="@+id/station_card_prediction"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textColor="@color/secondary_text"
                    tools:text="12.23 feet"/>
            </RelativeLayout>

            <ImageView
                android:id="@+id/station_card_clock_iv"
                android:layout_width="85dp"
                android:layout_height="313dp"
                android:padding="@dimen/border_width"
                android:background="@drawable/border_rect"/>

        </LinearLayout>

</android.support.v7.widget.CardView>